# tglogging

./: .gitignore  README.md  flake.nix  pyproject.toml
sample/: example.py
src/tglogging/: __init__.py  config.py  formatters.py  priority_info.py  telegram.py  tglogging.py
src/tglogging/_internal/: __init__.py
tests/: test_config.py  test_edge_cases.py  test_formatters.py  test_strict_config.py  test_strict_config_extra.py  test_telegram.py  test_tglogging.py
tglogging/: tglogging.py
